--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "light-o-rama-audio-packager",
   "version": "1.0.0",
   "description": "A simple cross-platform audio preparation tool for Light-O-Rama sequencing.",
-  "author": "Created by John Thomas DuCrest Lock • ChatGPT 5.1 • Powered by SYMBEYOND",
+  "author": {
+    "name": "John Thomas DuCrest Lock",
+    "email": "contact@symbeyond.ai"
+  },
   "main": "app/main.js",
   "scripts": {
     "start": "electron .",
@@ -21,29 +24,21 @@
       "package.json"
     ],
     "extraResources": [
-      {
-        "from": "backend/",
-        "to": "backend/",
-        "filter": ["**/*"]
-      },
-      {
-        "from": "runtime/",
-        "to": "runtime/",
-        "filter": ["**/*"]
-      }
+      { "from": "backend/", "to": "backend/" },
+      { "from": "runtime/", "to": "runtime/" }
     ],
     "directories": {
       "output": "dist"
     },
     "mac": {
       "category": "public.app-category.utilities",
-      "target": ["dmg", "zip"]
+      "target": [ "dmg", "zip" ]
     },
     "win": {
-      "target": ["nsis", "zip"]
+      "target": [ "nsis", "zip" ]
     },
     "linux": {
-      "target": ["AppImage", "deb"],
+      "target": [ "AppImage", "deb" ],
       "category": "Utility"
     }
   },
