Complete trademark cleanup - remove all LOR/SuperStar references
- Renamed _LOR_ output files to _Symb_
- Renamed SuperStar to Star Timings
- Updated JS API from LOR to Symb
- Updated appId to com.symbeyond.symborama

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "dist:linux": "electron-builder --linux --x64"
   },
   "build": {
-    "appId": "com.symbeyond.lorpackager",
+    "appId": "com.symbeyond.symborama",
     "productName": "Symb-O-Rama Audio Packager",
     "asar": false,
     "directories": {
